[skip ci] Update tutorials/NSE.ipynb
Co-authored-by: durgals <durgalal.shrestha@gmail.com>
Signed-off-by: Nikeeth Ramanathan <nikeeth.ramanathan@gmail.com>

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -25,7 +25,7 @@
     "- $\\bar{o}$ is the mean of the observed values\n",
     "- $n$ is the number of data points\n",
     "- $\\sigma_{\\large{o}}^2$ is the un-weighted observation variance\n",
-    "- MSE is the mean-squared error, equivilent to the `scores` function: `scores.continuous.mse`\n",
+    "- MSE is the mean-squared error, equivalent to the `scores` function: `scores.continuous.mse`\n",
     "\n",
     "\n",
     "Scores also supports the use of `weights`. These can be used to scale both the individual forecast error in the numerator and the deviation from the observation mean in the denominator. This is also known as the weighted-NSE or wNSE (for an application of this, see: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002)).\n<br>",
