[skip ci] Update tutorials/NSE.ipynb
Co-authored-by: durgals <durgalal.shrestha@gmail.com>
Signed-off-by: Nikeeth Ramanathan <nikeeth.ramanathan@gmail.com>

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -42,7 +42,7 @@
     "- $\\sigma_{\\large{o_w}}^2$ is the weighted obs variance\n",
     "- $\\small\\text{MWSE}$ is the mean of the weighted square errors - again this is also equivilent to `scores.continuous.mse`, if using the weights argument\n",
     "\n",
-    " > **caution:** $\\small\\text{MWSE}$ (scores) should not be confused with $\\small\\text{WMSE}$ (weighted mean square errror):\n",
+    " > **caution:** $\\small\\text{MWSE}$ (scores) should not be confused with $\\small\\text{WMSE}$ (weighted mean square errror) where weights are normalised (e.g., https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html:\n",
     " > - $\\small\\text{WMSE}$ is a _\"weighted mean\"_ of _\"unweighted\"_ error terms.<br>\n",
     " > - On the other hand, $\\small\\text{MWSE}$ is a _\"unweighted mean\"_ of _\"weighted\"_ error terms.<br>\n",
     " > - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the *weights sum to 1*.\n",
