[skip ci] Update tutorials/NSE.ipynb
Co-authored-by: durgals <durgalal.shrestha@gmail.com>
Signed-off-by: Nikeeth Ramanathan <nikeeth.ramanathan@gmail.com>

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "A perfect model has an NSE value of 1, while a model performing as poorly as the mean of the observed data has an NSE value of 0 or less.\n",
     "\n",
-    "In hydrological modeling, the Nash–Sutcliffe Efficiency (NSE) is essential for assessing model performance. An NSE of 1 indicates perfect prediction, while 0 suggests the model performs as well as predicting the mean of the data. Negative values imply the observed mean is a better predictor. NSE values closer to 1 denote superior predictive ability. In regression analyses, NSE parallels the coefficient of determination (R²), representing model fit on a scale from 0 to 1.\n",
+    "In hydrological modeling, the Nash–Sutcliffe Efficiency (NSE) is essential for assessing model performance. An NSE of 1 indicates perfect prediction, while 0 suggests the model performs as well as predicting the mean of the data. Negative values imply the observed mean is a better predictor. NSE values closer to 1 denote superior predictive ability. In regression analyses, NSE parallels the coefficient of determination (R²) as a measure of model fit, but it ranges from -∞ to 1, rather than 0 to 1.\n",
     "\n",
     "> **Note:**\n",
     "> \n",
