[review] address science comments

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Nash-Sutcliffe Efficiency (NSE)\n",
-    "In this tutorial, we will calculate the Nash-Sutcliffe Efficiency (NSE) coefficient using the function `scores.continuous.nse`.\n",
+    "In this tutorial, we will calculate the Nash–Sutcliffe model efficiency coefficient (NSE) using the function `scores.continuous.nse`.\n",
     "\n",
     "NSE is a widely used metric in hydrology and other fields to evaluate the performance of a model by comparing its predictions to observed data.\n",
     "\n",
     "## Definition\n",
     "\n",
-    "The Nash-Sutcliffe Efficiency (NSE) is defined as:\n",
+    "From [Nash and Sutcliffe (1970)](https://doi.org/10.1016/0022-1694(70)90255-6), paraphrased to the context in `scores`, NSE is defined as follows:\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
@@ -28,8 +28,8 @@
     "- MSE is the mean-squared error, equivalent to the `scores` function: `scores.continuous.mse`\n",
     "\n",
     "\n",
-    "Scores also supports the use of `weights`. These can be used to scale both the individual forecast error in the numerator and the deviation from the observation mean in the denominator. This is also known as the weighted-NSE or wNSE (for an application of this, see: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002)).\n<br>",
-    "$$\n",
+    "Scores also supports the use of `weights`. These can be used to scale both the individual forecast error in the numerator and the deviation from the observation mean in the denominator. This is also known as the weighted-NSE or wNSE; for an application of this, refer to [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002).\n",
+    "<br>$$\n",
     "\\begin{align*}\n",
     "\\large{\\text{wNSE}} &= 1 - \\large\\frac{\\large\\sum_{i=1}^{n}w_i.(f_i - o_i)^2}{\\large\\sum_{i=1}^{n}w_i.(o_i - \\bar{o})^2} \\\\ \n",
     "                      &= 1 - \\large\\frac{\\text{MWSE}}{\\sigma_{o_w}^2} \\\\ \n",
@@ -42,7 +42,7 @@
     "- $\\sigma_{\\large{o_w}}^2$ is the weighted obs variance\n",
     "- $\\small\\text{MWSE}$ is the mean of the weighted square errors - again this is also equivilent to `scores.continuous.mse`, if using the weights argument\n",
     "\n",
-    " > **caution:** $\\small\\text{MWSE}$ (scores) should not be confused with $\\small\\text{WMSE}$ (weighted mean square errror) where weights are normalised (e.g., https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html:\n",
+    " > **caution:** $\\small\\text{MWSE}$ (scores) should not be confused with $\\small\\text{WMSE}$ (weighted mean square errror) where weights are normalised (e.g. https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html):\n",
     " > - $\\small\\text{WMSE}$ is a _\"weighted mean\"_ of _\"unweighted\"_ error terms.<br>\n",
     " > - On the other hand, $\\small\\text{MWSE}$ is a _\"unweighted mean\"_ of _\"weighted\"_ error terms.<br>\n",
     " > - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the *weights sum to 1*.\n",
@@ -57,23 +57,22 @@
     "\n",
     "## Interpretation\n",
     "\n",
-    "A perfect model has an NSE value of 1, while a model performing as poorly as the mean of the observed data has an NSE value of 0 or less.\n",
-    "\n",
     "In hydrological modeling, the Nash–Sutcliffe Efficiency (NSE) is essential for assessing model performance. An NSE of 1 indicates perfect prediction, while 0 suggests the model performs as well as predicting the mean of the data. Negative values imply the observed mean is a better predictor. NSE values closer to 1 denote superior predictive ability. In regression analyses, NSE parallels the coefficient of determination (R²) as a measure of model fit, but it ranges from -∞ to 1, rather than 0 to 1.\n",
     "\n",
     "> **Note:**\n",
     "> \n",
     "> The image (co-domain) of $R^2 : (x, x_\\text{fit}) \\rightarrow \\text{score}$ does not necessarily need to be constrained to $[0, 1]$. It's just that a linear least squares optimisation makes it impossible for a fit to do worse than the mean.\n",
     ">\n",
-    "> Analysis using NSE explicitly doesn't pose such restrictions. Its more akin to the signal to noise ratio in this sense, in fact\n",
+    "> Analysis using NSE explicitly doesn't pose such restrictions. Its more akin to the signal to noise ratio in this sense ([Duc & Sawada, 2023](https://doi.org/10.5194/hess-27-1827-2023)). In fact,\n",
     ">\n",
     "> $\\text{SNR} \\Large = \\frac{E[{O^2}]}{E[\\xi_\\text{model}^2]} = \\frac{\\sigma_{o}^2}{\\text{MSE}} = \\frac{1}{1 - NSE}$\n",
     "> \n",
-    "> Where, $O$ is the observed process (\"signal\"), and $\\xi_\\text{model}$ is the error of the modelled predictions/forecasts/simulations (\"noise\")\n",
+    "> Where, $O$ is the observed process (\"signal\"), and $\\xi_\\text{model}$ is the error of the modelled predictions/forecasts/simulations (\"noise\").\n",
     "\n",
     "## References\n",
     "1. Nash, J. E., & Sutcliffe, J. V. (1970). River flow forecasting through conceptual models part I — A discussion of principles. Journal of Hydrology, 10(3), 282–290. https://doi.org/10.1016/0022-1694(70)90255-6 <br>\n",
     "2. Hundecha, Y., & Bárdossy, A. (2004). Modeling of the effect of land use changes on the runoff generation of a river basin through parameter regionalization of a watershed model. Journal of Hydrology, 292(1–4), 281–295. https://doi.org/10.1016/j.jhydrol.2004.01.002 <br>\n",
+    "3. Duc, L., & Sawada, Y. (2023). A signal-processing-based interpretation of the Nash–Sutcliffe efficiency. Hydrology and Earth System Sciences, 27(9), 1827–1839. https://doi.org/10.5194/hess-27-1827-2023 <br>\n",
     "\n",
     "\n",
     "## Using the `nse` Function\n",
@@ -353,12 +352,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<REDACTED>: UserWarning: \n",
-      "    NSE: possible divide by zero - at least one element in the reduced obs\n",
-      "    variance array is 0.  Any divide by zero entries will be filled in as `np.nan` if the forecast\n",
-      "    error is also 0, otherwise it will be `-np.inf`. This is so that any other valid entries are\n",
-      "    still computed and returned.  The user should still verify that zero obs variance is expected\n",
-      "    for the given input data.\n",
+      "/home/nvr90/repos/scores_nr/src/scores/continuous/nse_impl.py:1033: UserWarning: \n",
+      "    NSE: possible divide by zero - at least one element in the reduced\n",
+      "    obs variance array is 0.  Any divide by zero entries will be filled in as\n",
+      "    `np.nan` if the forecast error is also 0, otherwise it will be `-np.inf`.\n",
+      "    This is so that any other valid entries are still computed and returned.\n",
+      "    The user should still verify that zero obs variance is expected for the\n",
+      "    given input data.\n",
       "    \n",
       "  warnings.warn(NseUtils.WARN_ZERO_OBS_VARIANCE)\n"
      ]
@@ -764,13 +764,13 @@
        "       [0., 0., 0., 0., 0.]])\n",
        "Coordinates:\n",
        "  * ensemble  (ensemble) &lt;U9 108B &#x27;Ensemble1&#x27; &#x27;Ensemble2&#x27; &#x27;Ensemble3&#x27;\n",
-       "  * time      (time) datetime64[ns] 40B 2024-01-01 2024-01-02 ... 2024-01-05</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'observed'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>ensemble</span>: 3</li><li><span class='xr-has-index'>time</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-4c355a5c-3e7c-4685-8692-2624b3b40538' class='xr-array-in' type='checkbox' checked><label for='section-4c355a5c-3e7c-4685-8692-2624b3b40538' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., 0., 0.],\n",
+       "  * time      (time) datetime64[ns] 40B 2024-01-01 2024-01-02 ... 2024-01-05</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'observed'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>ensemble</span>: 3</li><li><span class='xr-has-index'>time</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-c7863420-323e-4808-b9e9-bb1c6e9c6a14' class='xr-array-in' type='checkbox' checked><label for='section-c7863420-323e-4808-b9e9-bb1c6e9c6a14' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-206dac74-c9fa-467a-afec-4154fbf512df' class='xr-section-summary-in' type='checkbox'  checked><label for='section-206dac74-c9fa-467a-afec-4154fbf512df' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>ensemble</span></div><div class='xr-var-dims'>(ensemble)</div><div class='xr-var-dtype'>&lt;U9</div><div class='xr-var-preview xr-preview'>&#x27;Ensemble1&#x27; &#x27;Ensemble2&#x27; &#x27;Ensemble3&#x27;</div><input id='attrs-bf7d8c78-d152-4510-a3cf-df8e5563812d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bf7d8c78-d152-4510-a3cf-df8e5563812d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ebc17943-b46f-437d-981a-0ab35972ea50' class='xr-var-data-in' type='checkbox'><label for='data-ebc17943-b46f-437d-981a-0ab35972ea50' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;&lt;U9&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2024-01-01 ... 2024-01-05</div><input id='attrs-b70cce6c-d4b4-44d7-ac97-02cf87f4907a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b70cce6c-d4b4-44d7-ac97-02cf87f4907a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ebe35a4b-a06e-4e8f-92f6-cc593c0777d7' class='xr-var-data-in' type='checkbox'><label for='data-ebe35a4b-a06e-4e8f-92f6-cc593c0777d7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2024-01-01T00:00:00.000000000&#x27;, &#x27;2024-01-02T00:00:00.000000000&#x27;,\n",
+       "       [0., 0., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-40673ccb-c8c0-4f15-81b5-a1105a5949df' class='xr-section-summary-in' type='checkbox'  checked><label for='section-40673ccb-c8c0-4f15-81b5-a1105a5949df' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>ensemble</span></div><div class='xr-var-dims'>(ensemble)</div><div class='xr-var-dtype'>&lt;U9</div><div class='xr-var-preview xr-preview'>&#x27;Ensemble1&#x27; &#x27;Ensemble2&#x27; &#x27;Ensemble3&#x27;</div><input id='attrs-15a14e30-40fe-414d-9efd-1dbc8ed9eb1b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-15a14e30-40fe-414d-9efd-1dbc8ed9eb1b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-db3a1beb-4fb9-47fc-975f-a873511db604' class='xr-var-data-in' type='checkbox'><label for='data-db3a1beb-4fb9-47fc-975f-a873511db604' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;&lt;U9&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2024-01-01 ... 2024-01-05</div><input id='attrs-6c92dea8-e315-4e39-9ca0-428a81225818' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6c92dea8-e315-4e39-9ca0-428a81225818' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-23d7470a-e530-403b-aaef-b45ba6ddbf0d' class='xr-var-data-in' type='checkbox'><label for='data-23d7470a-e530-403b-aaef-b45ba6ddbf0d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2024-01-01T00:00:00.000000000&#x27;, &#x27;2024-01-02T00:00:00.000000000&#x27;,\n",
        "       &#x27;2024-01-03T00:00:00.000000000&#x27;, &#x27;2024-01-04T00:00:00.000000000&#x27;,\n",
-       "       &#x27;2024-01-05T00:00:00.000000000&#x27;], dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7481ddfe-7a95-4ca7-bc1c-a629d4e5f21c' class='xr-section-summary-in' type='checkbox'  ><label for='section-7481ddfe-7a95-4ca7-bc1c-a629d4e5f21c' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>ensemble</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-e096cc4c-0955-491d-b528-9d97e4ab01cf' class='xr-index-data-in' type='checkbox'/><label for='index-e096cc4c-0955-491d-b528-9d97e4ab01cf' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;object&#x27;, name=&#x27;ensemble&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-0662a8be-f83c-4876-a2a2-23e768d298bb' class='xr-index-data-in' type='checkbox'/><label for='index-0662a8be-f83c-4876-a2a2-23e768d298bb' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2024-01-01&#x27;, &#x27;2024-01-02&#x27;, &#x27;2024-01-03&#x27;, &#x27;2024-01-04&#x27;,\n",
+       "       &#x27;2024-01-05T00:00:00.000000000&#x27;], dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-452f8c93-aac9-4de9-954c-ef17c17021b5' class='xr-section-summary-in' type='checkbox'  ><label for='section-452f8c93-aac9-4de9-954c-ef17c17021b5' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>ensemble</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-5b3539b7-7498-4215-b620-8abde44ee3f6' class='xr-index-data-in' type='checkbox'/><label for='index-5b3539b7-7498-4215-b620-8abde44ee3f6' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;object&#x27;, name=&#x27;ensemble&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-943be69c-9cac-412f-bdc4-951085a4f976' class='xr-index-data-in' type='checkbox'/><label for='index-943be69c-9cac-412f-bdc4-951085a4f976' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2024-01-01&#x27;, &#x27;2024-01-02&#x27;, &#x27;2024-01-03&#x27;, &#x27;2024-01-04&#x27;,\n",
        "               &#x27;2024-01-05&#x27;],\n",
-       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=&#x27;D&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7b2b1de0-6fd9-4428-954d-402b34d59fd5' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-7b2b1de0-6fd9-4428-954d-402b34d59fd5' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=&#x27;D&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3136a4ff-ba87-45ce-87b1-0d9f9127d4b4' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-3136a4ff-ba87-45ce-87b1-0d9f9127d4b4' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'observed' (ensemble: 3, time: 5)> Size: 120B\n",
@@ -1156,8 +1156,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Is `nse` causing the quirky broadcasting or is it `mse`?**\n<br>",
-    "\n",
+    "**Is NSE causing the quirky broadcasting or is it MSE?**\n",
+    "<br>\n",
     "_(spoiler: neither)_\n",
     "\n",
     "As mentioned `nse` uses `mse` under the hood for consistency. We can show that this broadcasting behaviour is not unique to `nse` by replacing those operations with `mse`.\n",
@@ -1428,7 +1428,7 @@
     "- or scaling using the `weights` input argument.\n"
    ]
   }
-],
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -1445,7 +1445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
