remove duplicate seed in tutorial

--- a/tutorials/Spearmans_Correlation.ipynb
+++ b/tutorials/Spearmans_Correlation.ipynb
@@ -36,12 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate monotonic function data\n",
-    "np.random.seed(42)\n",
     "x_monotonic = np.arange(100)\n",
     "y_monotonic = np.log1p(x_monotonic) + np.random.normal(scale=0.1, size=100)  # Logarithmic relationship with noise\n",
     "\n",
@@ -97,7 +96,7 @@
     "plt.ylabel(\"Observed (y)\")\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -149,7 +148,7 @@
     "\n",
     "print(\"\\nLinear Data:\")\n",
     "print(f\"Spearman Correlation: {spearman_linear.values}\")\n",
-    "print(f\"Pearson Correlation: {pearson_linear.values}\")\n"
+    "print(f\"Pearson Correlation: {pearson_linear.values}\")"
    ]
   },
   {
