--- a/tutorials/Spearmans_Correlation.ipynb
+++ b/tutorials/Spearmans_Correlation.ipynb
@@ -11,17 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scores.continuous import mse\n",
-    "from scores.continuous.correlation import spearmanr, pearsonr\n",
+    "from scores.continuous.correlation import spearmanr\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import xarray as xr\n",
     "\n",
     "np.random.seed(42)  # Ensures consistent values across notebook runs"
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +74,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Plot monotonic data\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.scatter(x_monotonic, y_monotonic, label=\"Monotonic Data (logarithmic)\", color=\"blue\", alpha=0.7)\n",
