Slight adjustment to the citation in included.md Update header levels in tutorial for Spearman's Correlation

--- a/tutorials/Spearmans_Correlation.ipynb
+++ b/tutorials/Spearmans_Correlation.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Spearmans's correlation coefficient\n",
     "\n",
+    "\n",
+    "## Overview\n",
     "In *scores*, the `spearmanr` function is used to compute Spearman's rank correlation coefficient between two datasets (e.g., observations and forecasts). While Spearman’s and Pearson’s correlation coefficients can yield similar values when the relationship is nearly linear, they measure different types of association. Spearman’s correlation captures monotonic relationships, regardless of whether they are linear, whereas Pearson’s correlation specifically measures the strength of a linear relationship. As a result, in cases where the relationship is non-linear but monotonic, Spearman’s correlation may be higher than Pearson’s."
    ]
   },
@@ -144,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Monotonic Relationship**\n",
+    "## Monotonic Relationship\n",
     "\n",
     "Spearman Correlation:\n",
     "    Spearman’s correlation assesses monotonic relationships by ranking the data. Although the relationship is not strictly linear, the ranks of the forecast (`x_monotonic`) and observed (`y_monotonic`) values follow a consistent monotonic trend. As a result, Spearman’s correlation is expected to be high, close to 1, indicating a strong monotonic association.\n",
@@ -152,7 +154,7 @@
     "Pearson Correlation:\n",
     "    Pearson’s correlation measures the strength of a linear relationship. Since the monotonic relationship here is logarithmic (i.e. non-linear), the Pearson correlation is expected to be lower than the Spearman correlation. However, it may still be moderately high if the log curve approximates a straight line over the observed range.\n",
     "\n",
-    "**Linear Relationship**\n",
+    "## Linear Relationship\n",
     "\n",
     "Spearman Correlation:\n",
     "    Linearity implies monotonicity, so the ranks of the forecast and observed values align perfectly. Therefore, Spearman’s correlation should be very close to 1.\n",
@@ -201,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Further Reading"
+    "## Further Reading"
    ]
   },
   {
@@ -220,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scores",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
