--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -62,7 +62,8 @@
     "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)\n",
     "- [Consistent Scores](./Consistent_Scores.ipynb)\n",
     "- [Threshold Weighted Scores](./Threshold_Weighted_Scores.ipynb)\n",
-    "- [Quantile Interval Score and Interval Score](./Quantile_Interval_And_Interval_Score.ipynb)"
+    "- [Quantile Interval Score and Interval Score](./Quantile_Interval_And_Interval_Score.ipynb)\n",
+    "- [Empericial Q-Q plots](./Empirical_Q-Q_plots.ipynb)"
    ]
   },
   {
@@ -246,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scores",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
