rename function and add to docs

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -63,7 +63,7 @@
     "- [Consistent Scores](./Consistent_Scores.ipynb)\n",
     "- [Threshold Weighted Scores](./Threshold_Weighted_Scores.ipynb)\n",
     "- [Quantile Interval Score and Interval Score](./Quantile_Interval_And_Interval_Score.ipynb)\n",
-    "- [Empericial Q-Q plots](./Empirical_Q-Q_plots.ipynb)"
+    "- [Q-Q plots](./Q-Q_plots.ipynb)"
    ]
   },
   {
